# location-backend

./: .dockerignore  .env.example  .env.test-restore  .gitignore  ADAPTIVE_FORMS_ARCHITECTURE.md  ARCHITECTURE_FORMULAIRES.md  Dockerfile  FACTORIES_USAGE.md  README.md  conftest.py  db.sqlite3  docker-compose.yml  entrypoint.sh  migrate_basic.py  migrate_geometries.py  pyproject.toml  pytest.ini  requirements.txt
algo/QUITTANCE DE LOYER (1)/: QUITTANCEDELOYER.html
algo/certificate/: issue_user_cert.py
algo/encadrement_loyer/: utils.py
algo/permis_de_louer/: permis_de_louer.ods
algo/quittance/: main.py  sign.py  sign2.py
algo/signature/: main.py
algo/zone_tendue/: zone_tendu.ods  zone_tendue_touristique.ods
algo/zone_tres_tendue/: zone_tres_tendue.csv  zone_tres_tendue.ods
assurances/: __init__.py  admin.py  apps.py  models.py  serializers.py  urls.py  utils.py  views.py  webhooks.py
assurances/migrations/: 0001_initial.py  0002_staticdocument.py  0003_alter_insurancepolicy_status.py
assurances/services/: documents.py  policy_number.py  quotation.py  stripe_service.py  subscription.py
authentication/: admin.py  apps.py  models.py  urls.py  utils.py  views.py
authentication/migrations/: 0001_initial.py
backend/: pdf_utils.py  pdf_views.py  pyhanko.yml  router.py  settings.py  storage_utils.py  urls.py
backend/encadrement_loyer/: utils.py
backend/quittance/: doc.html  sign2.py
bail/: API_PROGRESSIVE_GUIDE.md  admin.py  apps.py  avenant_views.py  constants.py  factories.py  models.py  progressive_views.py  serializers.py  urls.py  utils.py  views.py  views_partial.py
bail/generate_bail/: mapping.py
bail/migrations/: 0001_initial.py  0002_alter_bail_location_alter_bail_status.py  0002_alter_societe_siret.py  0002_historicalbail_alter_bail_options_and_more.py  0002_remove_bailspecificites_is_draft_and_more.py  0002_rename_description_bien_additionnal_description_and_more.py  0003_add_locataire_to_document.py  0003_bailsignaturerequest_otp_generated_at_and_more.py  0003_bailspecificites_pdf.py  0003_bailspecificites_permis_de_louer.py  0004_alter_bailsignaturerequest_unique_together_and_more.py  0004_alter_document_type_document.py  0004_bailsignaturerequest_created_at_and_more.py  0004_etatlieux_etatlieuxpiece_etatlieuxphoto_and_more.py  0004_remove_bailspecificites_locataire_and_more.py  0017_bien_etage.py  (+28 more)
certificates/: certeurope-seal-2048.csr  hestia_certificate_authority.cnf  hestia_server.cnf  hestia_tsa.cnf  hestia_tsa_generation.cnf  openssl-OI-Cachet.cnf
core/: email_service.py  email_subjects.py  url_builders.py
docs/: IMPLEMENTATION_CERTIFICATION_FLOW.md  README.md  adaptive-forms-architecture.md  architecture-overview.md  blog-publication-guide.md  courriers-electroniques-strategy.md  mrh-integration.md  playwright-debug-guide.md  signature-strategy-eidas-hybrid.md  testing-strategy.md
etat_lieux/: admin.py  apps.py  mapping.py  models.py  urls.py  utils.py  views.py
location/: admin.py  constants.py  equipment_config.py  factories.py  models.py  serializers.py  serializers_composed.py  urls.py  views.py  views_mandataire.py
notifications/: __init__.py  admin.py  models.py  serializers.py  urls.py  views.py
partenaires/: apps.py
quittance/: admin.py  apps.py  email_service.py  models.py  signature_utils.py  urls.py  views.py
rent_control/: admin.py  apps.py  choices.py  gps.txt  models.py  urls.py  utils.py  views.py
scripts/: backup_db.sh  test_restore.sh  upload_static_pdfs.py
signature/: admin.py  certification_flow.py  document_list_service.py  document_status.py  document_types.py  models.py  models_base.py  models_unified.py  pdf_processing.py  services.py  views.py
templates/: README.md
tests/: README.md  test_bail_factories.py  test_prefill_from_bien.py
tsa/: models.py  services.py
(+273 files in other folders)
